==> whwproj/mymcuproj/STM32L031G6Ux超低功耗/程序代码/Circular_Base/Core/Bsp/bsp_oled.c <==
#include "../Bsp/bsp_oled.h"
#define SCL_Pin GPIO_PIN_6
#define SCL_GPIO_Port GPIOB
#define SDA_Pin GPIO_PIN_7
#define SDA_GPIO_Port GPIOB
#define OLED_W_SCL(x) HAL_GPIO_WritePin(GPIOB, SCL_Pin, (GPIO_PinState)(x))
#define OLED_W_SDA(x) HAL_GPIO_WritePin(GPIOB, SDA_Pin, (GPIO_PinState)(x))

void OLED_I2C_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};

	/* GPIO Ports Clock Enable */
	__HAL_RCC_GPIOB_CLK_ENABLE();

	/*Configure GPIO pin Output Level */
	HAL_GPIO_WritePin(GPIOB, SCL_Pin | SDA_Pin, GPIO_PIN_SET);

	/*Configure GPIO pins : PBPin PBPin */
	GPIO_InitStruct.Pin = SCL_Pin | SDA_Pin;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	OLED_W_SCL(1);
	OLED_W_SDA(1);
}

void OLED_WriteCommand(uint8_t Command)
{
	uint8_t data[2];
	data[0] = 0x0;
	data[1] = Command;
	/*OLED_I2C_Start();
	OLED_I2C_SendByte(0x78); //从机地址
	OLED_I2C_SendByte(0x00); //写命令
	OLED_I2C_SendByte(Command);
	OLED_I2C_Stop();*/
	//HAL_I2C_Master_Receive(I2C_HandleTypeDef *hi2c, uint16_t DevAddress, uint8_t *pData, uint16_t Size, uint32_t Timeout);
	
	//HAL_I2C_Master_Transmit( &hi2c1, 0x78, data, 2, 0x100 );
	//HAL_I2C_Mem_Write( &hi2c1, 0x78, data[0], 1, &data[1], 1, 0x100 );
	
	HAL_I2C_Master_Transmit( &hi2c1, 0x78, data, 2, 0x100 );
	
}

void OLED_WriteData(uint8_t Data)
{
	uint8_t data[2];
	data[0] = 0x40;
	data[1] = Data;
	/*OLED_I2C_Start();
	OLED_I2C_SendByte(0x78); //从机地址
	OLED_I2C_SendByte(0x40); //写数据
	OLED_I2C_SendByte(Data);
	OLED_I2C_Stop();*/
	
	//HAL_I2C_Master_Transmit( &hi2c1, 0x78, data, 2, 0x100 );
	//HAL_I2C_Mem_Write( &hi2c1, 0x78, data[0], 1, &data[1], 1, 0x100 );
	
	HAL_I2C_Master_Transmit( &hi2c1, 0x78, data, 2, 0x100 );
}

void OLED_Init(void)
{
	uint32_t i, j;
	uint8_t pData = 0xFF;

	for (i = 0; i < 1000; i++) //上电延时
	{
		for (j = 0; j < 1000; j++)
			;
	}

	//OLED_I2C_Init(); //端口初始化
	printf( "strt:pData: %d", pData );
	//HAL_I2C_Mem_Read(&hi2c1, 0x78, 0, 1, &pData, 1, 0x100);
	HAL_I2C_Master_Receive( &hi2c1, 0x78, &pData, 1, 0x100 );
	printf( "  end:pData: %d\r\n", pData );
	//HAL_I2C_Master_Receive()

	OLED_WriteCommand(0xAE); //关闭显示

	OLED_WriteCommand(0xD5); //设置显示时钟分频比/振荡器频率
	OLED_WriteCommand(0x80);
	
	OLED_WriteCommand(0xA8); //设置多路复用率
	OLED_WriteCommand(0x3F);

	OLED_WriteCommand(0xD3); //设置显示偏移
	OLED_WriteCommand(0x00);
	
	OLED_WriteCommand(0x40); //设置显示开始行

	OLED_WriteCommand(0xA1); //设置左右方向，0xA1正常 0xA0左右反置

	OLED_WriteCommand(0xC8); //设置上下方向，0xC8正常 0xC0上下反置

	OLED_WriteCommand(0xDA); //设置COM引脚硬件配置
	OLED_WriteCommand(0x12);

	OLED_WriteCommand(0x81); //设置对比度控制
	OLED_WriteCommand(0xCF);

	OLED_WriteCommand(0xD9); //设置预充电周期
	OLED_WriteCommand(0xF1);

	OLED_WriteCommand(0xDB); //设置VCOMH取消选择级别
	OLED_WriteCommand(0x30);

	OLED_WriteCommand(0xA4); //设置整个显示打开/关闭

	OLED_WriteCommand(0xA6); //设置正常/倒转显示

	OLED_WriteCommand(0x8D); //设置充电泵
	OLED_WriteCommand(0x14);

	OLED_WriteCommand(0xAF); //开启显示

	OLED_Clear(); // OLED清屏
}
